--- a/form.html
+++ b/form.html
@@ -3,94 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nutrimais — Informações da Dieta</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Nutrimais - Informações</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #ffffff;
+            margin: 0;
+            padding: 0;
+            color: #222;
+        }
+        header {
+            background: #1dbf73;
+            padding: 16px;
+            text-align: center;
+            color: #fff;
+            font-size: 22px;
+            font-weight: bold;
+        }
+        .container {
+            width: 90%;
+            max-width: 500px;
+            margin: 30px auto;
+            background: #fff;
+            padding: 25px;
+            border-radius: 14px;
+            box-shadow: 0 4px 18px rgba(0,0,0,0.08);
+        }
+        .step-title {
+            font-size: 20px;
+            margin-bottom: 18px;
+            color: #1dbf73;
+            font-weight: bold;
+        }
+        label {
+            display: block;
+            font-size: 14px;
+            margin: 6px 0 4px;
+        }
+        input, select {
+            width: 100%;
+            padding: 12px;
+            margin-bottom: 14px;
+            border: 1px solid #cfcfcf;
+            border-radius: 8px;
+            font-size: 15px;
+        }
+        button {
+            background: #1dbf73;
+            color: #fff;
+            border: none;
+            width: 100%;
+            padding: 14px;
+            font-size: 16px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: bold;
+            transition: .3s;
+        }
+        button:hover {
+            background: #17a765;
+        }
+    </style>
 </head>
-
 <body>
 
-<header class="header">
-    <img src="assets/logo.png" alt="Nutrimais" class="logo">
-</header>
+<header>Nutrimais</header>
 
-<section class="form-section">
-    <h2>Monte sua dieta personalizada</h2>
-    <p>Preencha as informações abaixo e escolha seus alimentos favoritos 🍽</p>
+<div class="container">
+    <div class="step-title">Etapa 1 de 3 — Seus Dados</div>
 
-    <form id="dietForm">
-
+    <form action="planos.html" method="GET">
         <label>Nome completo:</label>
-        <input type="text" id="nome" required>
+        <input type="text" name="nome" required>
 
-        <label>Idade:</label>
-        <input type="number" id="idade" required>
+        <label>WhatsApp:</label>
+        <input type="tel" name="whatsapp" required>
 
-        <label>Peso (kg):</label>
-        <input type="number" id="peso" step="0.1" required>
+        <label>E-mail:</label>
+        <input type="email" name="email" required>
 
-        <label>Altura (cm):</label>
-        <input type="number" id="altura" required>
-
-        <label>Alergias ou intolerâncias:</label>
-        <input type="text" id="alergias" placeholder="Ex: lactose, glúten...">
-
-        <label>Objetivo:</label>
-        <select id="objetivo" required>
-            <option value="emagrecer">Emagrecimento</option>
-            <option value="definicao">Definição Muscular</option>
-            <option value="emagrecer_massa">Emagrecer + Massa</option>
-            <option value="definir_massa">Definição + Massa</option>
-            <option value="nutricionista">Consulta com Nutricionista</option>
-        </select>
-
-        <label>Suplementos:</label>
-        <div class="checkbox-group">
-            <label><input type="checkbox" value="Whey" class="supp"> Whey</label>
-            <label><input type="checkbox" value="Creatina" class="supp"> Creatina</label>
-        </div>
-
-        <label>Selecione seus alimentos favoritos:</label>
-        <div class="checkbox-group">
-            <label><input type="checkbox" value="Batata Doce" class="food"> Batata doce</label>
-            <label><input type="checkbox" value="Batata Inglesa" class="food"> Batata inglesa</label>
-            <label><input type="checkbox" value="Ovo" class="food"> Ovo</label>
-            <label><input type="checkbox" value="Frango" class="food"> Frango</label>
-            <label><input type="checkbox" value="Iogurte" class="food"> Iogurte</label>
-            <label><input type="checkbox" value="Whey" class="food"> Whey</label>
-            <label><input type="checkbox" value="Creatina" class="food"> Creatina</label>
-            <label><input type="checkbox" value="Arroz" class="food"> Arroz</label>
-            <label><input type="checkbox" value="Feijão" class="food"> Feijão</label>
-            <label><input type="checkbox" value="Purê de Batata" class="food"> Purê de batata</label>
-            <label><input type="checkbox" value="Macarrão" class="food"> Macarrão</label>
-        </div>
-
-        <label>Outros alimentos (opcional):</label>
-        <input type="text" id="outros">
-
-        <button type="submit" class="btn-primary">Continuar</button>
+        <button type="submit">Próxima Etapa ➜</button>
     </form>
-</section>
-
-<script>
-document.getElementById("dietForm").addEventListener("submit", function(e){
-    e.preventDefault();
-
-    const data = {
-        nome: document.getElementById("nome").value,
-        idade: document.getElementById("idade").value,
-        peso: document.getElementById("peso").value,
-        altura: document.getElementById("altura").value,
-        alergias: document.getElementById("alergias").value,
-        objetivo: document.getElementById("objetivo").value,
-        suplementos: Array.from(document.querySelectorAll(".supp:checked")).map(el => el.value),
-        alimentos: Array.from(document.querySelectorAll(".food:checked")).map(el => el.value),
-        outros: document.getElementById("outros").value,
-    };
-
-    localStorage.setItem("dietData", JSON.stringify(data));
-    window.location.href = "plans.html";
-});
-</script>
+</div>
 
 </body>
 </html>
