--- a/form.html
+++ b/form.html
@@ -16,8 +16,9 @@
 
       <input type="number" id="peso" placeholder="Peso (kg)" required>
       <input type="number" id="altura" placeholder="Altura (cm)" required>
-      <input type="number" id="idade" placeholder="Idade" required>
-
+      <input type="number" id="idade" placeholder="Idade" required><button type="submit">Continuar</button>
+</form>
+    
       <select id="objetivo" required>
         <option value="">Objetivo</option>
         <option value="Emagrecimento">Emagrecimento</option>
