--- a/dieta.html
+++ b/dieta.html
@@ -10,63 +10,63 @@
 
 <div class="container">
   <h1>Monte sua dieta</h1>
-  <p>Escolha os alimentos que mais combinam com você</p>
+  <p>Escolha os alimentos que mais combinam com seu dia a dia</p>
 
   <!-- CAFÉ DA MANHÃ -->
   <h2>Café da manhã</h2>
   <div class="grid-alimentos">
-    <div class="card" onclick="selecionarAlimento('cafeManha','Ovos')">🥚 Ovos</div>
-    <div class="card" onclick="selecionarAlimento('cafeManha','Pão integral')">🍞 Pão integral</div>
-    <div class="card" onclick="selecionarAlimento('cafeManha','Cuscuz')">🌽 Cuscuz</div>
-    <div class="card" onclick="selecionarAlimento('cafeManha','Tapioca')">🥞 Tapioca</div>
-    <div class="card" onclick="selecionarAlimento('cafeManha','Queijo')">🧀 Queijo</div>
-    <div class="card" onclick="selecionarAlimento('cafeManha','Frutas')">🍎 Frutas</div>
+    <div class="card" onclick="selecionarAlimento('cafeManha','Ovos', this)">🥚 Ovos</div>
+    <div class="card" onclick="selecionarAlimento('cafeManha','Pão integral', this)">🍞 Pão integral</div>
+    <div class="card" onclick="selecionarAlimento('cafeManha','Cuscuz', this)">🌽 Cuscuz</div>
+    <div class="card" onclick="selecionarAlimento('cafeManha','Tapioca', this)">🥞 Tapioca</div>
+    <div class="card" onclick="selecionarAlimento('cafeManha','Queijo', this)">🧀 Queijo</div>
+    <div class="card" onclick="selecionarAlimento('cafeManha','Frutas', this)">🍎 Frutas</div>
   </div>
 
   <!-- ALMOÇO -->
   <h2>Almoço</h2>
   <div class="grid-alimentos">
-    <div class="card" onclick="selecionarAlimento('almoco','Arroz')">🍚 Arroz</div>
-    <div class="card" onclick="selecionarAlimento('almoco','Feijão')">🫘 Feijão</div>
-    <div class="card" onclick="selecionarAlimento('almoco','Frango grelhado')">🍗 Frango grelhado</div>
-    <div class="card" onclick="selecionarAlimento('almoco','Carne grelhada')">🥩 Carne grelhada</div>
-    <div class="card" onclick="selecionarAlimento('almoco','Peixe')">🐟 Peixe</div>
-    <div class="card" onclick="selecionarAlimento('almoco','Salada')">🥗 Salada</div>
+    <div class="card" onclick="selecionarAlimento('almoco','Arroz', this)">🍚 Arroz</div>
+    <div class="card" onclick="selecionarAlimento('almoco','Feijão', this)">🫘 Feijão</div>
+    <div class="card" onclick="selecionarAlimento('almoco','Frango grelhado', this)">🍗 Frango grelhado</div>
+    <div class="card" onclick="selecionarAlimento('almoco','Carne grelhada', this)">🥩 Carne grelhada</div>
+    <div class="card" onclick="selecionarAlimento('almoco','Peixe', this)">🐟 Peixe</div>
+    <div class="card" onclick="selecionarAlimento('almoco','Salada', this)">🥗 Salada</div>
   </div>
 
   <!-- CAFÉ DA TARDE -->
   <h2>Café da tarde</h2>
   <div class="grid-alimentos">
-    <div class="card" onclick="selecionarAlimento('cafeTarde','Pão + frango')">🍞🍗 Pão + frango</div>
-    <div class="card" onclick="selecionarAlimento('cafeTarde','Pão + ovo')">🍞🥚 Pão + ovo</div>
-    <div class="card" onclick="selecionarAlimento('cafeTarde','Tapioca de frango')">🥞🍗 Tapioca frango</div>
-    <div class="card" onclick="selecionarAlimento('cafeTarde','Cuscuz + ovo')">🌽🥚 Cuscuz + ovo</div>
-    <div class="card" onclick="selecionarAlimento('cafeTarde','Pão de queijo')">🧀 Pão de queijo</div>
-    <div class="card" onclick="selecionarAlimento('cafeTarde','Whey 1 scoop')">🥤 Whey</div>
+    <div class="card" onclick="selecionarAlimento('cafeTarde','Pão + frango', this)">🍞🍗 Pão + frango</div>
+    <div class="card" onclick="selecionarAlimento('cafeTarde','Pão + ovo', this)">🍞🥚 Pão + ovo</div>
+    <div class="card" onclick="selecionarAlimento('cafeTarde','Tapioca de frango', this)">🥞🍗 Tapioca frango</div>
+    <div class="card" onclick="selecionarAlimento('cafeTarde','Cuscuz + ovo', this)">🌽🥚 Cuscuz + ovo</div>
+    <div class="card" onclick="selecionarAlimento('cafeTarde','Pão de queijo', this)">🧀 Pão de queijo</div>
+    <div class="card" onclick="selecionarAlimento('cafeTarde','Whey 1 scoop', this)">🥤 Whey</div>
   </div>
 
   <!-- JANTA -->
   <h2>Janta</h2>
   <div class="grid-alimentos">
-    <div class="card" onclick="selecionarAlimento('janta','Batata doce')">🍠 Batata doce</div>
-    <div class="card" onclick="selecionarAlimento('janta','Macarrão')">🍝 Macarrão</div>
-    <div class="card" onclick="selecionarAlimento('janta','Frango cozido')">🍗 Frango cozido</div>
-    <div class="card" onclick="selecionarAlimento('janta','Patinho')">🥩 Patinho</div>
-    <div class="card" onclick="selecionarAlimento('janta','Atum')">🐟 Atum</div>
-    <div class="card" onclick="selecionarAlimento('janta','Legumes')">🥕 Legumes</div>
+    <div class="card" onclick="selecionarAlimento('janta','Batata doce', this)">🍠 Batata doce</div>
+    <div class="card" onclick="selecionarAlimento('janta','Macarrão', this)">🍝 Macarrão</div>
+    <div class="card" onclick="selecionarAlimento('janta','Frango cozido', this)">🍗 Frango cozido</div>
+    <div class="card" onclick="selecionarAlimento('janta','Patinho', this, this)">🥩 Patinho</div>
+    <div class="card" onclick="selecionarAlimento('janta','Atum', this)">🐟 Atum</div>
+    <div class="card" onclick="selecionarAlimento('janta','Legumes', this)">🥕 Legumes</div>
   </div>
 
   <!-- DOCE -->
   <h2>Doce</h2>
   <div class="grid-alimentos">
-    <div class="card" onclick="selecionarAlimento('doce','Chocolate')">🍫 Chocolate</div>
-    <div class="card" onclick="selecionarAlimento('doce','Doce de leite')">🍮 Doce de leite</div>
-    <div class="card" onclick="selecionarAlimento('doce','Doce de coco')">🥥 Doce de coco</div>
-    <div class="card" onclick="selecionarAlimento('doce','Brigadeiro')">🍬 Brigadeiro</div>
+    <div class="card" onclick="selecionarAlimento('doce','Chocolate', this)">🍫 Chocolate</div>
+    <div class="card" onclick="selecionarAlimento('doce','Doce de leite', this)">🍮 Doce de leite</div>
+    <div class="card" onclick="selecionarAlimento('doce','Doce de coco', this)">🥥 Doce de coco</div>
+    <div class="card" onclick="selecionarAlimento('doce','Brigadeiro', this)">🍬 Brigadeiro</div>
   </div>
 
   <!-- BOTÃO FINAL -->
-  <button class="btn" onclick="finalizarDieta()">Seguinte</button>
+  <button class="btn" onclick="finalizarDieta()">Ver dieta completa</button>
 </div>
 
 <script src="js/dieta.js"></script>
