--- a/dieta.html
+++ b/dieta.html
@@ -51,7 +51,7 @@
     <div class="card" onclick="selecionarAlimento('janta','Batata doce', this)">🍠 Batata doce</div>
     <div class="card" onclick="selecionarAlimento('janta','Macarrão', this)">🍝 Macarrão</div>
     <div class="card" onclick="selecionarAlimento('janta','Frango cozido', this)">🍗 Frango cozido</div>
-    <div class="card" onclick="selecionarAlimento('janta','Patinho', this, this)">🥩 Patinho</div>
+    <div class="card" onclick="selecionarAlimento('janta','Patinho', this)">🥩 Patinho</div>
     <div class="card" onclick="selecionarAlimento('janta','Atum', this)">🐟 Atum</div>
     <div class="card" onclick="selecionarAlimento('janta','Legumes', this)">🥕 Legumes</div>
   </div>
