--- a/index.html
+++ b/index.html
@@ -13,23 +13,30 @@
   <!-- LOGO -->
   <img src="img/logo.png" alt="Nutri+" class="logo anim-logo">
 
-  <!-- TEXTO PRINCIPAL -->
   <h1>Bem-vindo à Nutri+</h1>
 
   <p class="sub centralizado">
     Escolha como deseja continuar
   </p>
 
-  <!-- AÇÕES -->
   <div class="acoes">
-    <a href="dados.html" class="btn btn-outline">
+
+    <!-- NOVO USUÁRIO -->
+    <a href="dados.html" class="btn btn-verde">
       Sou novo na Nutri+
+      <span class="mini-texto branco">
+        Personalizar minha dieta agora
+      </span>
     </a>
 
-    <a href="portal.html" class="btn">
-      Já sou cliente da Nutri+  
-      <span class="mini">Acessar minha dieta</span>
+    <!-- CLIENTE -->
+    <a href="portal.html" class="btn btn-flutuante">
+      Já sou cliente da Nutri+
+      <span class="mini-texto verde">
+        Acessar minha dieta
+      </span>
     </a>
+
   </div>
 
 </div>
