--- a/index.html
+++ b/index.html
@@ -13,27 +13,25 @@
   <!-- LOGO -->
   <img src="img/logo.png" alt="Nutri+" class="logo anim-logo">
 
-  <h1>Bem-vindo à Nutri+!</h1>
+  <h1>Bem-vindo à Nutri+</h1>
 
   <p class="sub centralizado">
-    Escolha abaixo onde devemos te levar:
+    Escolha como deseja continuar
   </p>
 
   <div class="acoes">
 
-    <!-- NOVO USUÁRIO -->
     <a href="dados.html" class="btn btn-verde">
       Sou novo na Nutri+
       <span class="mini-texto branco">
-        Personalizar minha dieta agora.
+        Personalizar minha dieta agora
       </span>
     </a>
 
-    <!-- CLIENTE -->
     <a href="portal.html" class="btn btn-flutuante">
       Já sou cliente da Nutri+
       <span class="mini-texto verde">
-        Acessar minha dieta.
+        Acessar minha dieta
       </span>
     </a>
 
@@ -43,3 +41,4 @@
 
 </body>
 </html>
+
