--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- LOGO -->
   <img src="img/logo.png" alt="Nutri+" class="logo anim-logo">
 
-  <h1>Bem-vindo à Nutri+</h1>
+  <h1>Nutrição inteligente, feita para o seu corpo</h1>
 
   <p class="sub centralizado">
     Escolha como deseja continuar
