--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div class="container-inicio">
 
     <!-- LOGO -->
-    <img src="img/logo.png" alt="Nutri+" class="logo anim-logo">
+    <img src="img/logo.png" alt="Nutri+" class="logo">
 
-    <!-- FRASE IMPACTANTE -->
+    <!-- FRASE PRINCIPAL -->
     <h1 class="titulo-principal">
       Sua dieta personalizada começa aqui
     </h1>
@@ -22,16 +22,16 @@
       Escolha como deseja continuar
     </p>
 
-    <!-- BOTÃO NOVO -->
+    <!-- OPÇÃO NOVO -->
     <a href="dieta.html" class="card-opcao destaque">
       <span class="titulo-opcao">Sou novo na Nutri+</span>
       <span class="descricao-opcao">Personalizar minha dieta agora</span>
     </a>
 
-    <!-- BOTÃO CLIENTE -->
+    <!-- OPÇÃO CLIENTE -->
     <a href="login.html" class="card-opcao">
-      <span class="titulo-opcao verde">Já sou cliente da Nutri+</span>
-      <span class="descricao-opcao verde-claro">Acessar minha dieta</span>
+      <span class="titulo-opcao">Já sou cliente da Nutri+</span>
+      <span class="descricao-opcao">Acessar minha dieta</span>
     </a>
 
   </div>
