--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </p>
 
     <!-- OPÇÃO NOVO -->
-    <a href="dieta.html" class="card-opcao destaque">
+<a href="dados.html" class="card-opcao destaque">
       <span class="titulo-opcao">Sou novo na Nutri+</span>
       <span class="descricao-opcao">Personalizar minha dieta agora</span>
     </a>
