--- a/dados.html
+++ b/dados.html
@@ -14,8 +14,13 @@
 
   <div class="container">
 
-    <h1 class="titulo-principal">Vamos montar sua dieta</h1>
-    <p class="subtitulo">Preencha seus dados básicos</p>
+    <div class="bloco-intro">
+  <div class="icone-medidas">📏</div>
+  <h1 class="titulo-principal">Medidas Corporais</h1>
+  <p class="subtitulo">
+    Informe suas medidas aqui embaixo corretamente para darmos início
+  </p>
+</div>
 
     <div class="campo">
       <label>Nome</label>
