--- a/dados.html
+++ b/dados.html
@@ -7,10 +7,6 @@
   <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
-  <div class="topo-flutuante">
-  <span class="topo-titulo">Monte sua dieta</span>
-  <span class="topo-subtitulo">Crie sua dieta do seu jeito</span>
-</div>
 
   <div class="container">
 
@@ -55,9 +51,11 @@
       <label>Objetivo</label>
       <select>
         <option value="">Selecione</option>
-        <option>Emagrecer</option>
-        <option>Manter peso</option>
+        <option>Emagrecimento</option>
+        <option>Hipertrofia</option>
+        <option>Emagrecimento+Hiertofria</option>
         <option>Ganhar massa</option>
+        <option>Ganhar massa+Hipertrofia</option>
       </select>
     </div>
 
