--- a/dados.html
+++ b/dados.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="progresso">
+  <div class="progresso-barra"></div>
+</div>
 
     <div class="bloco-intro">
   <div class="icone-medidas">📏</div>
