--- a/dados.html
+++ b/dados.html
@@ -20,36 +20,37 @@
   </p>
 </div>
 
-    <div class="campo">
-      <label>Nome</label>
-      <input type="text" placeholder="Digite seu nome">
-    </div>
+<div class="form-wrapper">
+  <div class="campo-flutuante">
+    <label>Nome</label>
+    <input type="text" placeholder="Digite seu nome">
+  </div>
 
-    <div class="campo">
-      <label>Idade</label>
-      <input type="number" placeholder="Ex: 25">
-    </div>
+  <div class="campo-flutuante">
+    <label>Idade</label>
+    <input type="number" placeholder="Ex: 25">
+  </div>
 
-    <div class="campo">
-      <label>Peso (kg)</label>
-      <input type="number" placeholder="Ex: 70">
-    </div>
+  <div class="campo-flutuante">
+    <label>Peso (kg)</label>
+    <input type="number" placeholder="Ex: 70">
+  </div>
 
-    <div class="campo">
-      <label>Altura (cm)</label>
-      <input type="number" placeholder="Ex: 175">
-    </div>
+  <div class="campo-flutuante">
+    <label>Altura (cm)</label>
+    <input type="number" placeholder="Ex: 175">
+  </div>
 
-    <div class="campo">
-      <label>Sexo</label>
-      <select>
-        <option value="">Selecione</option>
-        <option>Masculino</option>
-        <option>Feminino</option>
-      </select>
-    </div>
+  <div class="campo-flutuante">
+    <label>Sexo</label>
+    <select>
+      <option>Selecione</option>
+      <option>Masculino</option>
+      <option>Feminino</option>
+    </select>
+  </div>
 
-    <div class="campo">
+  <div class="campo-flutuante">
       <label>Objetivo</label>
       <select>
         <option value="">Selecione</option>
