--- a/dados.html
+++ b/dados.html
@@ -65,8 +65,8 @@
   </div>
 
   <a href="dieta.html" class="card-opcao destaque botao-final">
-  <span class="titulo-opcao">Continuar</span>
-  <span class="descricao-opcao">Avançar para montar minha dieta</span>
+  <a href="alimentos.html" class="botao-principal">
+  Continuar
 </a>
 
 </body>
