--- a/dados.html
+++ b/dados.html
@@ -64,10 +64,9 @@
 
   </div>
 
-  <a href="dieta.html" class="card-opcao destaque botao-final">
-  <a href="alimentos.html" class="botao-principal">
+  <button id="btnContinuar" class="botao-principal" disabled>
   Continuar
-</a>
+</button>
 
 </body>
 </html>
